--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ const $DATA = {
         文本转语音 word-reading/
         文件转base64 file-2-base64/
         mp4转mp3 mp4-2-mp3/
+        JS时序图 sequence/
     `.split(/\n/).filter(item => item.trim()).map(item => item.trim()),
 };
 </script>
