--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@ button {margin-right: 20px;}
 <h1>浏览器应用</h1>
 <ul id="list"></ul>
 <script>
+const basePath = location.hostname === 'localhost' ? '/' : '/666/'
 document.querySelector('#list').innerHTML = 
 $DATA.dataList
 .map(item => item.split(/\s+/))
-.map(arr => `<button type="button" class="btn btn-default"><a href="/app/${arr[1]}">${arr[0]}</a></button>`)
+.map(arr => `<button type="button" class="btn btn-default"><a href="${basePath}app/${arr[1]}">${arr[0]}</a></button>`)
 .join('');
+console.log(basePath)
 </script>
 </body>
 </html>
