--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ const $DATA = {
         mp4转mp3 mp4-2-mp3/
         base64转图片 base64-to-image/
         时序图 sequence/
+        阴影方案 shadows/
+        颜色方案 colors/
     `.split(/\n/).filter(item => item.trim()).map(item => item.trim()),
 };
 </script>
