--- a/app/st/html/index.html
+++ b/app/st/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script>
-if (window.location.hostname !== 'zobor.github.io/') window.location.replace('./index-dev.html');
+if (window.location.hostname !== 'zobor.github.io') window.location.replace('./index-dev.html');
 else window.location.replace('./index-prod.html');
 </script>
 </body>
