--- a/app/colors/index.html
+++ b/app/colors/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS 阴影</title>
+  <title>颜色选择器</title>
 </head>
 <body>
 
