--- a/app/st/html/macd2.html
+++ b/app/st/html/macd2.html
@@ -143,9 +143,9 @@ const buildTable = (list) => {
 };
 
 const colors = [
-  'rgb(245, 183, 177)',
+  'rgb(166, 172, 175)',
   'rgb(118, 215, 196)',
-  'rgb(171, 178, 185)',
+  'rgb(133, 193, 233)',
   'rgb(246, 221, 204)',
   '#efefef'
 ]
@@ -170,7 +170,7 @@ function getOptions(params = {}) {
     series: [
       {
         name: 'A',
-        type: 'line',
+        type: 'bar',
         data: yData,
         showSymbol: false,
         itemStyle: {
