--- a/app/st/html/macd2.html
+++ b/app/st/html/macd2.html
@@ -11,8 +11,8 @@
   background: #efefef;
   top: 0;
   left: 0;
-  width: 96vw;
-  height: 70vh;
+  width: 100vw;
+  bottom: 170px;
 }
 #tb {
   position: absolute;
@@ -51,7 +51,7 @@
 }
 #time-limit {
   position: absolute;
-  bottom: 15vh;
+  bottom: 110px;
   left: 0;
   display: flex;
   list-style: none;
