--- a/app/st/html/macd2.html
+++ b/app/st/html/macd2.html
@@ -18,20 +18,44 @@
 #tb ul li:first-child{color:#000}
 #tb li.max{color:red}
 #tb li.min{color:green}
-#bs{position:absolute;bottom:5px;list-style:none;display:flex;flex-wrap:wrap;justify-content: space-between;}
+#bs{position:absolute;bottom:5px;list-style:none;display:flex;flex-wrap:wrap;justify-content: space-between; max-width: 300px;}
 #bs li{width:30%;display:inline-flex;justify-content:space-between;margin:0 10px;font-size: 14px;}
+#toggle {
+  width: 100px;
+  height: 20px;
+  line-height: 20px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom:0;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+body.max #app{
+  bottom: 0;
+}
+body.max #tb,
+body.max #time-limit,
+body.max #bs {
+  display: none;
+}
 </style>
 </head>
 <body>
 <div id="app"></div><div id="tb"></div><ul id="filter-list"><li>1</li><li>2</li><li>3</li><li>5</li></ul><ul id="time-limit"><li>0</li><li>30</li><li>60</li><li>90</li></ul><ul id="bs"></ul>
+<div id="toggle">♠</div>
 <script src="../lib/echarts.min.js"></script>
 <script type="module">
 import { getMinutesKline,getUrlParam, getMACD, float2Fix, getBSCurrent, moneyFormat } from '../src/utils.js';
 
 const myChart = echarts.init(document.getElementById('app'));
+window.myChart = myChart;
 const myTable = document.querySelector('#tb');
 const bs = document.querySelector('#bs');
 const $filter = document.querySelector('#filter-list');
+const $toggle = document.querySelector('#toggle');
 let filter = '';
 let limit = 0;
 
@@ -231,6 +255,10 @@ $filter.addEventListener('click', e => {
     });
     target.classList.add('active');
   }
+});
+$toggle.addEventListener('click', () => {
+  document.body.classList.toggle('max');
+  myChart.resize()
 });
 
 function bindEvent() {
