--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ const $DATA = {
         阴影方案 shadows/
         颜色方案 colors/
         按钮 buttons/
+        图片编辑 image-editor/
     `.split(/\n/).filter(item => item.trim()).map(item => item.trim()),
 };
 </script>
