--- a/app/bproxy-pages/index.html
+++ b/app/bproxy-pages/index.html
@@ -157,10 +157,10 @@
   
               <!-- Buttons -->
               <div class="text-center text-md-start downloads">
-                <a href="overview.html" class="btn btn-primary shadow lift me-1">
+                <a href="/" class="btn btn-primary shadow lift me-1">
                   Windows版本下载
                 </a>
-                <a href="docs/index.html" class="btn btn-primary-soft lift">
+                <a href="/" class="btn btn-primary-soft lift">
                   MacOS版本下载
                 </a>
               </div>
