--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ h1 {text-align: center;}
 
 <ul id="list"></ul>
 <script>
-const basePath = location.hostname === 'localhost' ? '/' : '/666/'
+const basePath = location.hostname === 'localhost' ? '/' : '/'
 const $list = document.querySelector('#list');
 let kw;
 const render = () => {
