--- a/app/bproxy-pages/index.html
+++ b/app/bproxy-pages/index.html
@@ -157,11 +157,14 @@
   
               <!-- Buttons -->
               <div class="text-center text-md-start downloads">
-                <a href="/files/bproxy-win32-x64.zip" class="btn btn-primary shadow lift me-1">
+                <a target="_blank" href="https://wwd.lanzouj.com/iCUoR07v212j" class="btn btn-primary shadow lift me-1">
                   Windows版本下载
                 </a>
-                <a href="/files/bproxy-darwin-x64.zip" class="btn btn-primary-soft lift">
+                <a target="_blank" href="https://wwd.lanzouj.com/i7Dfr07w63ba" class="btn btn-primary-soft lift">
                   MacOS版本下载
+                </a>
+                <a target="_blank" href="https://wwd.lanzouj.com/i7Dfr07w63ba" class="btn btn-primary-soft lift">
+                  MacOS M1版本下载
                 </a>
               </div>
   
