--- a/app/bproxy-pages/index.html
+++ b/app/bproxy-pages/index.html
@@ -181,7 +181,7 @@
                 <a target="_blank" href="https://wwd.lanzouj.com/i7Dfr07w63ba" class="btn btn-primary-soft lift">
                   MacOS版本下载
                 </a>
-                <a target="_blank" href="https://wwd.lanzouj.com/i7Dfr07w63ba" class="btn btn-primary-soft lift">
+                <a target="_blank" href="https://wwd.lanzouj.com/imOCN07zxoni" class="btn btn-primary-soft lift">
                   MacOS M1版本下载
                 </a>
               </div>
